@@ -1,4 +1,4 @@
-// Copyright (C) 2001, 2007 Free Software Foundation, Inc.
+// Copyright (C) 2001 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -36,29 +36,55 @@ struct gt
     { return x > y; }
 };
 
-// 25.3.3.4 binary_search, with and without comparison predicate
+// Each test performs general-case, bookend, not-found condition,
+// and predicate functional checks.
+
+// 25.3.3.3 equal_range, with and without comparison predicate
 void
-test04()
+test03()
 {
-    using std::binary_search;
+    using std::equal_range;
+    typedef std::pair<const int*, const int*> Ipair;
     
     const int first = A[0];
     const int last = A[N - 1];
 
-    VERIFY(binary_search(A, A + N, 5));
-    VERIFY(binary_search(A, A + N, first));
-    VERIFY(binary_search(A, A + N, last));
-    VERIFY(!binary_search(A, A + N, 4));
-
-    VERIFY(binary_search(C, C + N, 5, gt()));
-    VERIFY(binary_search(C, C + N, first, gt()));
-    VERIFY(binary_search(C, C + N, last, gt()));
-    VERIFY(!binary_search(C, C + N, 4, gt()));
+    Ipair p = equal_range(A, A + N, 3);
+    VERIFY(p.first == A + 2);
+    VERIFY(p.second == A + 5);
+    
+    Ipair q = equal_range(A, A + N, first);
+    VERIFY(q.first == A + 0);
+    VERIFY(q.second == A + 1);
+    
+    Ipair r = equal_range(A, A + N, last);
+    VERIFY(r.first == A + N - 1);
+    VERIFY(r.second == A + N);
+    
+    Ipair s = equal_range(A, A + N, 4);
+    VERIFY(s.first == A + 5);
+    VERIFY(s.second == A + 5);
+    
+    Ipair t = equal_range(C, C + N, 3, gt());
+    VERIFY(t.first == C + 2);
+    VERIFY(t.second == C + 5);
+    
+    Ipair u = equal_range(C, C + N, first, gt());
+    VERIFY(u.first == C + N - 1);
+    VERIFY(u.second == C + N);
+    
+    Ipair v = equal_range(C, C + N, last, gt());
+    VERIFY(v.first == C + 0);
+    VERIFY(v.second == C + 1);
+    
+    Ipair w = equal_range(C, C + N, 4, gt());
+    VERIFY(w.first == C + 2);
+    VERIFY(w.second == C + 2);
 }
 
 int
 main()
 {
-  test04();  
+  test03();
   return 0;
 }
